# mongoose

./: .gitignore  CMakeLists.txt  mongoose.c  mongoose.c.manifest  mongoose.h  mongoose.h.manifest
examples/: examples.mk
examples/simplest_telnet_server/: Makefile  simplest_telnet_server.c
examples/telnet_server_linenoise/: lc.h  pt.h  telnet_server.c
examples/telnet_server_linenoise/linenoise/: CMakeLists.txt  example.c  linenoise.c  linenoise.h
src/: mg_modules.mk  mg_telnet.c  mg_telnet.h  mg_telnet_debug.c
